# MFF2

./: .gitignore
ATWA/cli-arguments/: args.php  fix-links.php  out.html  test.html
ATWA/css/: style.css  style.css.map  style.scss
ATWA/erastotenes/: solution.php
ATWA/nim/: index.php  template.php
ATWA/start/: index.html  style.css  style.scss
DL/01_numpy_entropy/: numpy_entropy.py
DL/02_mnist_layers_activations/: mnist_layers_activations.py
DL/02_mnist_layers_activations/logs/mnist_layers_activations.py-2020-03-07_182323-a=relu,bs=50,e=1,hl=100,l=1,r=False,s=42,t=1,v=False/train/: events.out.tfevents.1583601804.l102.svitavy.cz.21072.252.v2
DL/02_mnist_layers_activations/logs/mnist_layers_activations.py-2020-03-07_182504-a=relu,bs=50,e=1,hl=100,l=1,r=False,s=42,t=1,v=False/train/: events.out.tfevents.1583601905.l102.svitavy.cz.21428.252.v2
DL/02_mnist_layers_activations/logs/mnist_layers_activations.py-2020-03-07_182517-a=relu,bs=50,e=1,hl=100,l=0,r=False,s=42,t=1,v=False/train/: events.out.tfevents.1583601917.l102.svitavy.cz.21485.226.v2
DL/02_mnist_layers_activations/logs/mnist_layers_activations.py-2020-03-15_223354-a=relu,bs=50,e=1,hl=100,l=0,r=False,s=42,t=1,v=False/train/: events.out.tfevents.1584308034.l101.svitavy.cz.14601.226.v2
DL/03_pca_first/: pca_first.out  pca_first.py
PPE/01-kmeans/: CMakeLists.txt
PPE/01-kmeans/framework/: done.cpp  implementation.hpp  k-means.cpp
PPE/01-kmeans/serial/: implementation.hpp
PPE/02-levenshtein/: CMakeLists.txt
PPE/02-levenshtein/framework/: Makefile  done.cpp  implementation.hpp  levenshtein  levenshtein.cpp
PPE/03-potential/: CMakeLists.txt
PPE/03-potential/src/: Makefile  implementation.hpp  kernels.cu  kernels.h  potential
PPE/04-matrixmul-mpi/: CMakeLists.txt
PPE/04-matrixmul-mpi/done/: main.cpp  utils.h
PPE/04-matrixmul-mpi/src/: Makefile  copy.sh  main.cpp  printer.cpp  write_utils.hpp
PPE/05-dns-netcore/: Program.cs  Solution.cs  dns-netcore.csproj  dns-netcore.sln.DotSettings
PPE/exec/: comparator  generator  multiply
